--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -99,7 +99,7 @@
     }
 }
 
-.info-section {
+.info-section, {
     h2{
          margin-bottom: 80px;
         font-size:80px;
@@ -109,6 +109,14 @@
         width:75%;
 
     }
+}
+
+.cable-section{
+     h2{
+         margin-bottom: 80px;
+        font-size:80px;
+    }
+
 }
     .btn {
         display:inline-block;
