--- a/css/_info.scss
+++ b/css/_info.scss
@@ -64,15 +64,31 @@ input {
     box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
-.button:hover {
-    border-top-color: #ffffff;
-    background: #ffffff;
-    color: #a7b828;
-    text-shadow: none;
-    cursor: pointer;
+
+
+
+
+.form-btn{
+      margin: 0px auto;
+
+    background: #96d59e;
+    font-weight: 800;
+    font-size: 22px;
+    display: block;
+    padding: 15px;
+    text-align: center;
+    // border-radius: 0.3em;
+    color: black;
+    border-bottom: 4px solid rgba(0, 0, 0, 0.5);
+    border-radius:4px;
 }
 
-.button:active {
-    border-top-color: #ffffff;
-    background: #ffffff;
+
+
+
+
+.form-btn:hover {
+    background-color: #69956F;
+    color: white;
+    text-decoration: none;
 }
