--- a/css/style.scss
+++ b/css/style.scss
@@ -313,7 +313,7 @@ li {
         margin:0 auto;
     }
 
-.wavier-section {
+.waiver-section {
     background: #5eadcb;
     h2 {
         margin-bottom: 15px;
@@ -322,8 +322,10 @@ li {
         font-size:15px;
         text-align: center;
     }
-
-    .wavier-btn {
+a{
+    line-height: 1;
+}
+    .waiver-btn {
      
         margin: 0px auto;
 
@@ -338,6 +340,13 @@ li {
     border-bottom: 4px solid rgba(0, 0, 0, 0.5);
     border-radius:4px;
     }
+
+
+.waiver-btn:hover {
+    background-color: #69956F;
+    color: white;
+    text-decoration: none;
+}
 }
 
 /* Prices section 
@@ -399,7 +408,11 @@ li {
     border-bottom: 4px solid rgba(0, 0, 0, 0.5);
     border-radius:4px;
     }
-
+.member-btn:hover {
+    background-color: #69956F;
+    color: white;
+    text-decoration: none;
+}
 
 /* rentals section
 ===================================*/
@@ -593,9 +606,10 @@ footer {
        }
       
     }
-}
-    
 
+}
+
+    
  
 }
 
