--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,8 @@ li:last-of-type {
 /* Footer Styles
 ===================================*/
 footer {
-  height: 400px;
+  padding-top: 210px;
+  padding-bottom: 120px;
   width: 100%;
   background: #373235;
   margin-top: -50px; }
@@ -546,9 +547,14 @@ footer {
       width: 50px;
       display: inline-block;
       float: left;
-      margin-right: 30px; }
+      margin-right: 30px;
+      margin-bottom: 30px; }
       footer .social-container .svg:last-of-type {
         margin-right: 0; }
+  footer p {
+    display: block;
+    text-align: center;
+    font-size: 18px; }
 
 .top {
   display: none;
@@ -807,7 +813,10 @@ nav .logo-fix {
     display: inline-block; }
 
   .lessons-info-section .img-fix {
-    width: 75%; } }
+    width: 75%; }
+
+  li {
+    box-shadow: none; } }
 @media screen and (min-width: 992px) {
   .logo p {
     font-size: 30px;
@@ -924,11 +933,6 @@ nav .logo-fix {
 
   .events-section h3 {
     margin-top: -4px; }
-  .events-section li {
-    box-shadow: none; }
-
-  .calender-btn {
-    width: 70%; }
 
   .lessons-section .col-md-6 {
     padding-right: 15px;
