added info to standard equipment/ added new class for heros

--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -128,9 +128,11 @@
     }
 
 }
- li {
-            box-shadow: none;
-        }
+ .events-section{
+    li{
+        box-shadow:none;
+    }
+ }
 
 
 }
