--- a/css/style.scss
+++ b/css/style.scss
@@ -135,6 +135,14 @@ li {
     display: inline-block;
 }
 
+.rent{
+    padding:0 0 10px 0;
+    font-size:15px;
+}
+
+.add-pad{
+    padding-bottom:45px;
+}
 .kern{
      letter-spacing: -3px;
 }
