fixed hero img breakpoints

--- a/css/_firsttime.scss
+++ b/css/_firsttime.scss
@@ -7,12 +7,13 @@
 // http://www.biyahenglaguna.com/wp-content/uploads/2014/05/IMG_3499-1024x682.jpg
 .questions-hero{
 background-image: url(../images/boots-change2.jpg);
-background-position:top left;
+background-position:40% 0;
 
    
    }
 
    .first-time-section{
+      padding-top:160px;
    	margin-top:-40px;
    	background:white;
    	h2{
