--- a/css/_info.scss
+++ b/css/_info.scss
@@ -1,7 +1,7 @@
 .info-hero {
-   background:url(../images/two-rail1.jpg);
+   background:url(../images/two-rail.jpg);
    background-repeat:no-repeat;
-    background-position: 40% -30px;
+    background-position: 50% 0px;
     background-size:cover;
 
   
