--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h2,
 
 .pages-hero {
   background-size: cover;
-  height: 468px; }
+  height: 500px; }
 
 .first {
   background-image: url(../images/girl-air1.jpg);
@@ -612,9 +612,10 @@ footer {
 
 .questions-hero {
   background-image: url(../images/boots-change2.jpg);
-  background-position: top left; }
+  background-position: 40% 0; }
 
 .first-time-section {
+  padding-top: 160px;
   margin-top: -40px;
   background: white; }
   .first-time-section h2 {
@@ -627,9 +628,9 @@ footer {
   background: white; }
 
 .info-hero {
-  background: url(../images/two-rail1.jpg);
+  background: url(../images/two-rail.jpg);
   background-repeat: no-repeat;
-  background-position: 40% -30px;
+  background-position: 50% 0px;
   background-size: cover; }
 
 .info-section {
@@ -767,6 +768,11 @@ nav .logo-fix {
     font-size: 26px;
     margin-top: 80px; }
 
+  .lessons-hero {
+    background: url(../images/sesitec.jpg);
+    background-size: cover;
+    background-position: 40% -20px; }
+
   li {
     box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5); }
 
@@ -827,10 +833,20 @@ nav .logo-fix {
 
   .events-section li {
     box-shadow: none; } }
+@media screen and (min-width: 810px) {
+  .lessons-hero {
+    background: url(../images/sesitec.jpg);
+    background-size: cover;
+    background-position: 40% -75px; } }
 @media screen and (min-width: 992px) {
   .logo p {
     font-size: 30px;
     margin-top: -35px; }
+
+  .lessons-hero {
+    background: url(../images/sesitec.jpg);
+    background-size: cover;
+    background-position: 40% -155px; }
 
   .info-section h3 {
     margin-top: 0; }
@@ -883,7 +899,7 @@ nav .logo-fix {
 
   .item {
     background-size: cover;
-    height: 550px; }
+    height: 700px; }
 
   .first {
     background-image: url(../images/girl-air.jpg);
@@ -952,7 +968,11 @@ nav .logo-fix {
     width: 50%; }
 
   .info-section .img-fix {
-    margin: 0; } }
+    margin: 0; }
+
+  .questions-hero {
+    background-image: url(../images/boots-change2.jpg);
+    background-position: 40% -80px; } }
 @media screen and (min-width: 1200px) {
   .prices-container, .rental-prices {
     margin-right: .45%;
@@ -971,6 +991,24 @@ nav .logo-fix {
     width: 40%; }
 
   .form-btn {
-    width: 40%; } }
+    width: 40%; }
+
+  .lessons-hero {
+    background: url(../images/sesitec.jpg);
+    background-size: cover;
+    background-position: 40% -300px; }
+
+  .questions-hero {
+    background-image: url(../images/boots-change2.jpg);
+    background-position: 40% -130px; } }
+@media screen and (min-width: 1400px) {
+  .lessons-hero {
+    background: url(../images/sesitec.jpg);
+    background-size: cover;
+    background-position: 40% -275px; }
+
+  .questions-hero {
+    background-image: url(../images/boots-change2.jpg);
+    background-position: 40% -160px; } }
 
 /*# sourceMappingURL=style.css.map */
