--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,9 @@ li:last-of-type {
 
 .rent {
   padding: 0 0 10px 0;
-  font-size: 15px; }
+  font-size: 15px;
+  display: block;
+  font-weight: 500; }
 
 .add-pad {
   padding-bottom: 45px; }
