fixed margin-bottom on firsttime page

--- a/css/_firsttime.scss
+++ b/css/_firsttime.scss
@@ -25,7 +25,11 @@ background-position:40% 0;
    	}
    	p,h3{
    		color:black;
+
    	}
+      p{
+          margin-bottom:120px;
+      }
    }
 
 
