--- a/css/_info.scss
+++ b/css/_info.scss
@@ -1,5 +1,5 @@
 .info-hero {
-   background:url(../images/two-rail.jpg);
+   background:url(../images/two-rail1.jpg);
    background-repeat:no-repeat;
     background-position: 50% 0px;
     background-size:cover;
