--- a/css/style.css
+++ b/css/style.css
@@ -632,7 +632,7 @@ footer {
   background: white; }
 
 .info-hero {
-  background: url(../images/two-rail.jpg);
+  background: url(../images/two-rail1.jpg);
   background-repeat: no-repeat;
   background-position: 50% 0px;
   background-size: cover; }
