--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -179,7 +179,7 @@
 
 .info-section {
     h3{
-        margin-top:0;
+        margin-top:-5px;
     }
 
 
@@ -370,7 +370,13 @@ background-position:40% -80px;
    
    }
 
-
+.form-section{
+    h2{
+        color:black;
+        margin-bottom:50px;
+        font-size:80px;
+    }
+}
 
 
 }
