--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,39 @@
 /* Main Styling
 ===================================*/
 
+.left-chev{
+    background:url(../images/left-chev1.png);
+    height:48px;
+    width:48px;
+
+    position: absolute;
+    top:50%;
+ 
+    z-index: 99;
+    display: inline-block;
+    font-size:30px;
+}
+
+
+.right-chev{
+    background:url(../images/right-chev.png);
+    height:48px;
+    width:48px;
+
+    position: absolute;
+    top:50%;
+ 
+    z-index: 99;
+    display: inline-block;
+    font-size:30px;
+}
+
+
+
+
+
+
+
 html {
     -webkit-font-smoothing: antialiased;
 }
@@ -47,6 +80,10 @@ p, a {
         }
     }
 }
+
+
+
+
 
 p {
     font-size: 17px;
@@ -109,7 +146,7 @@ li {
     font-weight: 800;
     font-size: 22px;
     display: block;
-    padding:10px 30px 10px 30px;
+    padding: 10px 30px 10px 30px;
     text-align: center;
     // border-radius: 0.3em;
     color: black;
@@ -135,18 +172,19 @@ li {
     display: inline-block;
 }
 
-.rent{
-    padding:0 0 10px 0;
-    font-size:15px;
-    display:block;
+.rent {
+    padding: 0 0 10px 0;
+    font-size: 15px;
+    display: block;
     font-weight: 500;
 }
 
-.add-pad{
-    padding-bottom:45px;
+.add-pad {
+    padding-bottom: 45px;
 }
-.kern{
-     letter-spacing: -3px;
+
+.kern {
+    letter-spacing: -3px;
 }
 
 /* Helpers for top position on internal page links
@@ -251,7 +289,6 @@ li {
         margin-top: -15px;
         color: white;
         font-weight: 800;
-
         font-size: 16px;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
     }
@@ -312,16 +349,13 @@ li {
 /* About us section ends
 ===================================*/
 
-
 /* Wavier Section
 ===================================*/
 
-    .btn-container{
-        
-        max-width:345px;
-
-        margin:0 auto;
-    }
+.btn-container {
+    max-width: 345px;
+    margin: 0 auto;
+}
 
 .waiver-section {
     background: #5eadcb;
@@ -329,34 +363,29 @@ li {
         margin-bottom: 15px;
     }
     p {
-        
         text-align: center;
     }
-a{
-    line-height: 1;
-}
-    .waiver-btn {
-     
-        margin: 20px auto;
-
-    background: #96d59e;
-    font-weight: 800;
-    font-size: 22px;
-    display: block;
-    padding: 15px;
-    text-align: center;
-    // border-radius: 0.3em;
-    color: black;
-    border-bottom: 4px solid rgba(0, 0, 0, 0.5);
-    border-radius:4px;
+    a {
+        line-height: 1;
     }
-
-
-.waiver-btn:hover {
-    background-color: #69956F;
-    color: white;
-    text-decoration: none;
-}
+    .waiver-btn {
+        margin: 20px auto;
+        background: #96d59e;
+        font-weight: 800;
+        font-size: 22px;
+        display: block;
+        padding: 15px;
+        text-align: center;
+        // border-radius: 0.3em;
+        color: black;
+        border-bottom: 4px solid rgba(0, 0, 0, 0.5);
+        border-radius: 4px;
+    }
+    .waiver-btn:hover {
+        background-color: #69956F;
+        color: white;
+        text-decoration: none;
+    }
 }
 
 /* Prices section 
@@ -371,9 +400,7 @@ a{
 }
 
 .prices-container {
-
-
-    margin:0  auto 180px auto;
+    margin: 0  auto 180px auto;
     &:last-child {
         margin-bottom: 0;
     }
@@ -392,7 +419,7 @@ a{
         bottom: 60px;
         width: 80px;
         height: 80px;
-        background-color: #faba56;
+        background-color: #EE6B4D;
         background-image: url("../images/ticket2.png");
         background-repeat: no-repeat;
         background-position: 16px 16px;
@@ -404,9 +431,9 @@ a{
         margin-bottom: 4px;
     }
 }
-.member-btn{
-    margin: 30px auto;
 
+.member-btn {
+    margin: 30px auto;
     background: #96d59e;
     font-weight: 800;
     font-size: 22px;
@@ -416,8 +443,9 @@ a{
     // border-radius: 0.3em;
     color: black;
     border-bottom: 4px solid rgba(0, 0, 0, 0.5);
-    border-radius:4px;
-    }
+    border-radius: 4px;
+}
+
 .member-btn:hover {
     background-color: #69956F;
     color: white;
@@ -451,7 +479,7 @@ a{
 .rental-circle {
     width: 80px;
     height: 80px;
-    background: #faba56;
+    background: #EE6B4D;
     border-radius: 50px;
     position: relative;
     bottom: 60px;
@@ -539,7 +567,7 @@ a{
     .hours-circle {
         width: 80px;
         height: 80px;
-        background: #faba56;
+        background: #EE6B4D;
         border-radius: 50px;
         position: relative;
         bottom: 60px;
@@ -596,41 +624,30 @@ a{
 /* Footer Styles
 ===================================*/
 footer {
-    padding-top:210px;
-    padding-bottom:120px;
-
+    padding-top: 210px;
+    padding-bottom: 120px;
     width: 100%;
-    background:#373235;
-    margin-top:-50px;
-    .social-container{
+    background: #373235;
+    margin-top: -50px;
+    .social-container {
         margin: 0 auto;
-         width:210px;
-
-    .svg{
-
-        width:50px;
-       display:inline-block;
-       float:left;
-       margin-right: 30px;
-       margin-bottom:30px;
-       &:last-of-type{
-        margin-right:0;
-
-       }
-      
+        width: 210px;
+        .svg {
+            width: 50px;
+            display: inline-block;
+            float: left;
+            margin-right: 30px;
+            margin-bottom: 30px;
+            &:last-of-type {
+                margin-right: 0;
+            }
+        }
     }
-
-}
-  p{
-    display:block;
-    text-align:center;
-    font-size:18px;
-      
- 
+    p {
+        display: block;
+        text-align: center;
+        font-size: 18px;
     }
-
-    
- 
 }
 
 // /* To Top Button Styles
@@ -682,10 +699,10 @@ footer {
         }
         p {
             margin-top: -8px;
-            margin-right:-5px;
+            margin-right: -5px;
             margin-bottom: 0;
             font-size: 14px;
-            color:black;
+            color: black;
             text-shadow: none;
         }
     }
