--- a/css/_firsttime.scss
+++ b/css/_firsttime.scss
@@ -18,8 +18,9 @@ background-position:40% 0;
    	background:white;
    	h2{
  
-   		margin-bottom:80px;
+   		margin-bottom:40px;
    		color:black;
+         font-size:60px;
 
 
    	}
