--- a/css/_lessons.scss
+++ b/css/_lessons.scss
@@ -1,5 +1,5 @@
 .lessons-hero {
-    background: url(../images/sesitec.jpg);
+    background: url(../images/sesitec1.jpg);
     background-size: cover;
     // background-position: 40% -380px;
        background-position: 40% 0px;
