--- a/css/style.css
+++ b/css/style.css
@@ -613,7 +613,7 @@ footer {
     color: black; }
 
 .questions-hero {
-  background-image: url(../images/boots-change2.jpg);
+  background-image: url(../images/boots-change3.jpg);
   background-position: 40% 0; }
 
 .first-time-section {
@@ -702,7 +702,7 @@ input {
   text-decoration: none; }
 
 .lessons-hero {
-  background: url(../images/sesitec.jpg);
+  background: url(../images/sesitec1.jpg);
   background-size: cover;
   background-position: 40% 0px; }
 
