changed p to white

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -32,7 +32,7 @@ h2,
 }
 
 .second {
-    background-image: url(../images/teen-rider.jpg);
+    background-image: url(../images/teen-rider1.jpg);
     background-position: 50%;
 }
 
@@ -43,7 +43,7 @@ h2,
 // }
 
 .fourth {
-    background-image: url(../images/philip.jpg);
+    background-image: url(../images/philip1.jpg);
     background-position: 80% 0px;
     background-size: cover;
 }
