--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,11 @@ h2,
   background-repeat: no-repeat; }
 
 .second {
-  background-image: url(../images/teen-rider.jpg);
+  background-image: url(../images/teen-rider1.jpg);
   background-position: 50%; }
 
 .fourth {
-  background-image: url(../images/philip.jpg);
+  background-image: url(../images/philip1.jpg);
   background-position: 80% 0px;
   background-size: cover; }
 
