fixed color on lessons price icon

--- a/css/style.css
+++ b/css/style.css
@@ -757,7 +757,7 @@ nav .logo-fix {
     bottom: 60px;
     width: 80px;
     height: 80px;
-    background-color: #faba56;
+    background-color: #EE6B4D;
     background-image: url("../images/ticket2.png");
     background-repeat: no-repeat;
     background-position: 16px 16px;
