--- a/css/_lessons.scss
+++ b/css/_lessons.scss
@@ -84,7 +84,7 @@ nav{
         bottom: 60px;
         width: 80px;
         height: 80px;
-        background-color: #faba56;
+        background-color: #EE6B4D;
         background-image: url("../images/ticket2.png");
         background-repeat: no-repeat;
         background-position: 16px 16px;
