--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,9 @@ li:last-of-type {
   background: transparent;
   color: white; }
 
+.navbar-toggle {
+  margin-top: 10px; }
+
 .logo {
   display: inline-block; }
   .logo h1 {
@@ -452,9 +455,6 @@ li:last-of-type {
   text-align: center;
   margin-bottom: 4px; }
 
-/* Inside Image
-===================================*
-*/
 /* Location Section
 ===================================*
 */
@@ -522,6 +522,8 @@ li:last-of-type {
     text-align: center;
     margin-bottom: 4px; }
 
+/* Programs Section
+ ===================================*/
 .programs-section {
   background: #373235; }
   .programs-section h2 {
@@ -529,13 +531,14 @@ li:last-of-type {
   .programs-section .program-marg {
     margin-bottom: 120px; }
 
+/* Events Section
+===================================*/
 .events-section {
   background: #3fa6ad; }
   .events-section h2 {
     margin-bottom: 40px; }
   .events-section li {
     color: white;
-    list-style-type: circle;
     font-weight: 300;
     font-size: 17px;
     line-height: 1.6; }
@@ -569,6 +572,8 @@ footer {
     font-size: 18px;
     color: white; }
 
+/* To Top Button Styles
+===================================*/
 .top {
   display: none;
   background-color: #faba56;
@@ -595,7 +600,8 @@ footer {
   box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5);
   transition-duration: 0.1s; }
   .navbar-scroll .navbar-toggle {
-    border-color: black; }
+    border-color: black;
+    margin-top: 0; }
   .navbar-scroll #navbar li a {
     color: black; }
   .navbar-scroll .logo h1 {
@@ -787,6 +793,14 @@ nav .logo-fix {
   .menu {
     font-size: 22px; } }
 @media screen and (min-width: 768px) {
+  .logo {
+    display: inline-block; }
+    .logo h1 {
+      font-size: 85px; }
+    .logo p {
+      font-size: 20px;
+      margin-top: -25px; }
+
   .menu {
     font-size: 26px;
     margin-top: 80px; }
@@ -798,6 +812,9 @@ nav .logo-fix {
 
   li {
     box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5); }
+
+  .navbar-collapse li {
+    box-shadow: none; }
 
   .prices-container, .rental-prices, .hours-prices {
     margin-right: .45%;
@@ -847,7 +864,13 @@ nav .logo-fix {
     display: inline-block; }
 
   .events-section li {
-    box-shadow: none; } }
+    box-shadow: none; }
+
+  .circle-none {
+    display: none; }
+
+  .navbar-right {
+    margin-right: -9px; } }
 @media screen and (min-width: 810px) {
   .lessons-hero {
     background: url(../images/sesitec.jpg);
@@ -858,9 +881,14 @@ nav .logo-fix {
   .first-time-section h2, .lessons-info-section h2, .lessons-price-section h2 {
     font-size: 80px; } }
 @media screen and (min-width: 992px) {
-  .logo p {
-    font-size: 30px;
-    margin-top: -35px; }
+  .logo {
+    display: inline-block; }
+    .logo h1 {
+      font-size: 115px;
+      margin-top: 20px; }
+    .logo p {
+      font-size: 30px;
+      margin-top: -35px; }
 
   .lessons-hero {
     background: url(../images/sesitec.jpg);
@@ -883,9 +911,6 @@ nav .logo-fix {
     .lessons-price-section li:first-of-type {
       padding-top: 50px; }
 
-  .navbar-toggle {
-    margin-top: 4px; }
-
   .top-img img {
     margin-bottom: 120px; }
 
@@ -903,15 +928,7 @@ nav .logo-fix {
     margin-top: -30px; }
 
   .container {
-    max-width: 100%; }
-
-  .navbar-collapse li {
-    box-shadow: none; }
-
-  .logo {
-    display: inline-block; }
-    .logo h1 {
-      font-size: 115px; }
+    width: 90%; }
 
   .item {
     background-size: cover;
@@ -990,11 +1007,8 @@ nav .logo-fix {
     background-image: url(../images/boots-change2.jpg);
     background-position: 40% -80px; } }
 @media screen and (min-width: 1200px) {
-  .logo {
-    display: inline-block; }
-    .logo h1 {
-      font-size: 115px;
-      margin-top: 25px; }
+  .container {
+    width: 85%; }
 
   .prices-container, .rental-prices {
     margin-right: .45%;
