--- a/css/style.scss
+++ b/css/style.scss
@@ -11,12 +11,6 @@
 /* Main Styling
 ===================================*/
 
-
-
-
-
-
-
 html {
     -webkit-font-smoothing: antialiased;
 }
@@ -35,18 +29,8 @@ p, a {
     background: transparent;
 }
 
-// .col-sm-4{
-//     width:32%;
-//     margin-right:1%;
-//     &:last-of-type{
-//         margin-right:0;
-//     }
-// }
 .container {
-
-    max-width:90%;
- 
-
+    max-width: 90%;
 }
 
 #navbar {
@@ -56,10 +40,6 @@ p, a {
         }
     }
 }
-
-
-
-
 
 p {
     font-size: 17px;
@@ -124,7 +104,6 @@ li {
     display: block;
     padding: 10px 30px 10px 30px;
     text-align: center;
-    // border-radius: 0.3em;
     color: black;
     border-bottom: 4px solid rgba(0, 0, 0, 0.5);
 }
@@ -226,15 +205,8 @@ li {
     border: none;
 }
 
-// .dropdown-menu li a {
-//     padding: 4px 8px;
-//     border-radius: 6px;
-//     color:red;
-// }
-
 .nav-dropdown-scroll {
     background: #e7eaea;
-    // box-shadow: 0px 10px 9px rgba(0, 0, 0, 0.4);
 }
 
 .navbar-toggle,
@@ -242,6 +214,10 @@ li {
 .navbar-default .navbar-toggle:hover {
     background: transparent;
     color: white;
+}
+
+.navbar-toggle {
+    margin-top: 10px;
 }
 
 .logo {
@@ -352,7 +328,6 @@ li {
         display: block;
         padding: 15px;
         text-align: center;
-        // border-radius: 0.3em;
         color: black;
         border-bottom: 4px solid rgba(0, 0, 0, 0.5);
         border-radius: 4px;
@@ -416,7 +391,6 @@ li {
     display: block;
     padding: 15px;
     text-align: center;
-    // border-radius: 0.3em;
     color: black;
     border-bottom: 4px solid rgba(0, 0, 0, 0.5);
     border-radius: 4px;
@@ -470,10 +444,6 @@ li {
     text-align: center;
     margin-bottom: 4px;
 }
-
-/* Inside Image
-===================================*
-*/
 
 /* Location Section
 ===================================*
@@ -562,8 +532,8 @@ li {
     }
 }
 
-// /* Programs Section
-// ===================================*/
+/* Programs Section
+ ===================================*/
 .programs-section {
     background: #373235;
     h2 {
@@ -574,8 +544,8 @@ li {
     }
 }
 
-// /* Events Section
-// ===================================*/
+/* Events Section
+===================================*/
 
 .events-section {
     background: #3fa6ad;
@@ -584,7 +554,6 @@ li {
     }
     li {
         color: white;
-        list-style-type: circle;
         font-weight: 300;
         font-size: 17px;
         line-height: 1.6;
@@ -623,12 +592,12 @@ footer {
         display: block;
         text-align: center;
         font-size: 18px;
-        color:white;
+        color: white;
     }
 }
 
-// /* To Top Button Styles
-// ===================================*/
+/* To Top Button Styles
+===================================*/
 .top {
     display: none;
     background-color: #faba56;
@@ -655,10 +624,10 @@ footer {
     background: white;
     padding: 20px 0 10px 0;
     box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5);
-    // box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     transition-duration: 0.1s;
     .navbar-toggle {
         border-color: black;
+        margin-top: 0;
     }
     #navbar {
         li {
